# toraniko-rs

./: Cargo.toml  Justfile  LICENSE  README.md  lychee.toml  rustfmt.toml
.github/workflows/: ci.yml  lychee.yml
crates/math/: Cargo.toml  README.md
crates/math/benches/: math_benchmarks.rs
crates/math/src/: cross_section.rs  error.rs  lib.rs  linalg.rs  weights.rs  winsorize.rs
crates/model/: Cargo.toml  README.md
crates/model/benches/: model_benchmarks.rs
crates/model/src/: attribution.rs  constraints.rs  error.rs  factor_returns.rs  lib.rs  wls.rs
crates/primitives/: Cargo.toml  README.md
crates/primitives/src/: asset.rs  factor.rs  lib.rs  returns.rs  scores.rs  weights.rs
crates/styles/: Cargo.toml  README.md
crates/styles/src/: error.rs  lib.rs  momentum.rs  size.rs  value.rs
crates/toraniko/: Cargo.toml  README.md
crates/toraniko/examples/: data_utilities.rs  factor_returns.rs  full_pipeline.rs  style_factors.rs  yahoo_finance.rs
crates/toraniko/src/: lib.rs
crates/traits/: Cargo.toml  README.md
crates/traits/src/: estimator.rs  factor.rs  lib.rs  transform.rs
crates/utils/: Cargo.toml  README.md
crates/utils/src/: error.rs  fill.rs  lib.rs  rank.rs  smooth.rs
data/: daily_returns.csv  market_caps.csv  sectors.csv  valuations.csv
