[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
homepage = "https://github.com/factordynamics/toraniko-rs"
repository = "https://github.com/factordynamics/toraniko-rs"
authors = ["Factor Dynamics"]
keywords = ["factor-model", "quantitative-finance", "equity", "risk-model"]
categories = ["finance", "mathematics", "science"]

[workspace]
resolver = "2"
members = ["crates/*"]
default-members = ["crates/model"]

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[workspace.dependencies]
# Internal crates
toraniko-primitives = { version = "0.1.0", path = "crates/primitives" }
toraniko-traits = { version = "0.1.0", path = "crates/traits" }
toraniko-math = { version = "0.1.0", path = "crates/math" }
toraniko-styles = { version = "0.1.0", path = "crates/styles" }
toraniko-model = { version = "0.1.0", path = "crates/model" }
toraniko-utils = { version = "0.1.0", path = "crates/utils" }

# DataFrames
polars = { version = "0.46", default-features = false, features = ["lazy", "dtype-date", "dtype-datetime", "streaming", "rank", "rolling_window"] }

# Linear algebra (OpenBLAS backend)
ndarray = { version = "0.16", features = ["rayon"] }

# Error handling
thiserror = "2.0"

# Utilities
derive_more = { version = "2", features = ["display", "from", "into"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

# Testing
rstest = "0.24"
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
