[package]
name = "toraniko-math"
description = "Mathematical operations for the toraniko factor model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
polars = { workspace = true }
ndarray = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
approx = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "math_benchmarks"
harness = false
