[package]
name = "toraniko-model"
description = "Factor return estimation for the toraniko factor model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
toraniko-primitives = { workspace = true }
toraniko-traits = { workspace = true }
toraniko-math = { workspace = true }
polars = { workspace = true }
ndarray = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "model_benchmarks"
harness = false
