[package]
name = "toraniko-primitives"
description = "Core type definitions for the toraniko factor model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
derive_more = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
ndarray = { workspace = true }
