[package]
name = "toraniko-styles"
description = "Style factor implementations for the toraniko factor model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
toraniko-traits = { workspace = true }
toraniko-math = { workspace = true }
polars = { workspace = true }
thiserror = { workspace = true }
