[package]
name = "toraniko"
description = "A Rust implementation of the toraniko factor model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
toraniko-primitives = { workspace = true, optional = true }
toraniko-traits = { workspace = true, optional = true }
toraniko-math = { workspace = true, optional = true }
toraniko-styles = { workspace = true, optional = true }
toraniko-model = { workspace = true, optional = true }
toraniko-utils = { workspace = true, optional = true }

[dev-dependencies]
polars = { workspace = true, features = ["strings", "csv", "fmt"] }
rand = { workspace = true }
rand_distr = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
yahoo_finance_api = { workspace = true }
time = { workspace = true }

[features]
default = ["full"]
full = ["primitives", "traits", "math", "styles", "model", "utils"]

primitives = ["dep:toraniko-primitives"]
traits = ["dep:toraniko-traits"]
math = ["dep:toraniko-math"]
styles = ["dep:toraniko-styles"]
model = ["dep:toraniko-model"]
utils = ["dep:toraniko-utils"]

[[example]]
name = "style_factors"
required-features = ["full"]

[[example]]
name = "factor_returns"
required-features = ["full"]

[[example]]
name = "data_utilities"
required-features = ["full"]

[[example]]
name = "full_pipeline"
required-features = ["full"]

[[example]]
name = "yahoo_finance"
required-features = ["full"]
