[package]
name = "toraniko-traits"
description = "Trait abstractions for the toraniko factor model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
factors = { workspace = true }
polars = { workspace = true }
ndarray = { workspace = true }
thiserror = { workspace = true }
